--- a/src/styles/sections/hero.css
+++ b/src/styles/sections/hero.css
@@ -3,6 +3,7 @@
   flex-direction: row;
   max-width: 100%;
   margin: auto;
+  background: var(--mainBg);
 }
 
 .hero-left {
@@ -28,6 +29,7 @@
   font-size: 5rem;
   margin: auto;
   padding-top: 10%;
+  color: var(--text-90);
 }
 
 .hero-title {
@@ -56,7 +58,7 @@
   margin-left: auto;
   margin-right: auto;
   text-align: center;
-  color: var(--text);
+  color: var(--text-70);
   padding-bottom: 3%;
 }
 
@@ -64,7 +66,6 @@
   .hero {
     flex-direction: column-reverse;
     padding-bottom: 0;
-    /* background-size: 100% 100%; */
   }
   .hero-right,
   .hero-left {
